# Qt_QML_Android_LED_Control

./: CMakeLists.txt  Main.qml  README.md  main.cpp
GpioController/: gpiocontroller.cpp  gpiocontroller.h
android/src/org/myapp/gpio/: GpioJNI.java
jni/: gpio_mmio.cpp  gpio_mmio.h  jni_gpio.cpp
